2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* check page permissions before writing page TS configuration
	* don't override permissions of BE user in mod_web_dmail

2006-02-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Initial draft of categories conversion.

2006-02-02 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Small update to manual.
	* Add getRecursiveSelect function in class mod_web_dmail.

2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Include TS setup (for dmailer boundaries) optionally

2006-02-01  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Corrected misspelled and not initialized variables

2006-02-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to emails sent by cron task to admin.
	* Add file locking to dmailer cron script so that the dmailer cron never runs twice (bugtracker issue 2461).
	* Correct query for the fe_users case in makeStaticListQuery.
	* Comment out call to undefined getRecursiveSelect in funtion cmd_compileMailGroup
	* Remove records without email address from distribution lists.
	
2006-01-31 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add deleted column to sys_dmail table (bugtracker issue 2190).
	* Remove message-id setting from dmailer class. Use updated version of core t3lib_htmlmail.
	* Add email column to sys_dmail_maillog (bugtracker issue 2191).

2006-01-30 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Adjust default value of proposed messageid.

2006-01-29 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* ext_tables.php: add module_sys_dmail_category and module_sys_dmail_html to all types in fe_users TCA
	* Add option to use sendmail deferred delivery mode.
	* Remove from class.dmailer.php redundant functions now corrected in TYPO3 4.0 core.
	* Try to auto-detect charset when page is external.
	* Fix issue 611 (add real name in To: field of emails).
